--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="container vh-100 d-flex justify-content-center align-items-center">
 
     <!-- holdField -->
-    <div class="col-4 h-100 m-5 p-5 d-flex flex-column justify-content-start align-items-center">
+    <div class="col-4 h-100 m-5 p-5 d-flex flex-column justify-content-center align-items-center border border-danger">
       <button class="btn btn-info p-3" onclick="Game.start()"><h3>GAME START</h3></button>
       <h1 class="m-3">HOLD</h1>
       <canvas id="holdCanvas"></canvas>
@@ -43,7 +43,7 @@
 
 
     <!-- scoreField -->
-    <div class="col-4 h-100 m-5 p-5 d-flex flex-column justify-content-start align-items-center">
+    <div class="col-4 h-100 m-5 p-5 d-flex flex-column justify-content-center align-items-center">
       <!-- score -->
       <h1 class="m-3">SCORE</h1>
       <h2 class="scoreBoard w-100 py-2 rounded text-center"></h2>
